--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,12 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de productos</title>
 </head>
 <body>
     <div class="container">
         <h3>Registro de productos</h3>
+        <%if (productos.length) {%>
+        <table class="table mt-2">
+            <thead class="thead-dark">
+                <tr>
+                    <th>Nombre de producto</th>
+                    <th>Factura de compra</th>
+                    <th>Valor</th>
+                    <th>Vendedor</th>
+                    <th>Impuestos</th>
+                </tr>
+            </thead>
+            <% productos.forEach(function(producto) {%>
+            <tr>
+                <td><%= alumno.nombre %></td>
+                <td><%= alumno.documento %></td>
+                <td><%= alumno.fecha %></td>
+            </tr>
+            <%})%>
+        </table>
+        <%} else {%>
+            <p>Sin Registros</p>
+        <%}%>
+        <a class="btn btn-primary p-2" href="/registro-form">Registrar alumno</a>
     </div>
 </body>
 </html>
