--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,3 +1,4 @@
+<%- include('cabecera', {tituloweb: 'Registro de productos'}); %>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +12,7 @@
 <body>
     <div class="container">
         <h3>Registro de productos</h3>
+        <%- include('footer'); %>
         <%if (productos.length) {%>
         <table class="table mt-2">
             <thead class="thead-dark">
