--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -35,9 +35,9 @@
             <%})%>
         </table>
         <%} else {%>
-            <p>Sin Registros</p>
+            <p>Aún no se han registrado productos</p>
         <%}%>
-        <a class="btn btn-primary p-2" href="/registro-form">Registrar producto</a>
+        <a class="btn btn-dark p-2" href="/registro-form">Registrar producto</a>
     </div>
 </body>
 </html>
