--- a/app/views/registro-form.ejs
+++ b/app/views/registro-form.ejs
@@ -45,8 +45,8 @@
                         class="form-control"
                         placeholder="Impuesto">
                 </div>
-                <div class="form-group">
-                    <button class="btn btn-primary">Registrar</button>
+                <div class="form-group text-center">
+                    <button class="btn btn-outline-success my-2 my-sm-0">Registrar</button>
                 </div>
             </form>
         </div>
