--- a/app/views/navbar.ejs
+++ b/app/views/navbar.ejs
@@ -1,19 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Servicios Telemarket</a>
+    <a class="navbar-brand" href="/">EJS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav"> 
         <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/nosotros">Nosotros</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/contacto">Contacto</a>
-        </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
+            </li>
+            <%if (productos.length) {%>
+                <% productos.forEach(function(producto) {%>
+                <li class="nav-item">
+                        <a class="nav-link" href="/producto"><%= producto.nombre %></a>
+                </li>
+                <%})%>
+            <%} else {%>
+                <li class="nav-item">
+                    <a class="nav-link" href="/registro-form"></a>
+                </li>
+            <%}%>
         </ul>
     </div>
 </nav>
