--- a/app/views/Imagen.ejs
+++ b/app/views/Imagen.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="/Images/2227146.png" alt="prueba_1" height="200" width="200">
+        <img src="/Images/2227146.png" class="img-thumbnail mx-auto d block" alt="prueba_1">
         <div class="caption">
         </div>
       </div>
