--- a/app/views/producto.ejs
+++ b/app/views/producto.ejs
@@ -31,16 +31,15 @@
                 <td><%= producto.documento %></td>
                 <td><%= producto.impuesto %></td>
                 <%if (producto.nombre=='Milo') {%>
-                    <img src="/Images/2227146.png" alt="centered image" height="200" width="200">
+                    <img src="/Images/logo_milo.jpg" alt="centered image" height="200" width="400">
                 <%} else if (producto.nombre=='Chocolisto'){%>
-                    <img src="/Images/2227146.png" alt="centered image" height="200" width="200">
+                    <img src="/Images/logo_chocolisto.jpg" alt="centered image" height="200" width="400">
                 <%} else if (producto.nombre=='Nesquik'){%>
-                    <img src="/Images/2227146.png" alt="centered image" height="200" width="200">
+                    <img src="/Images/logo_nesquik.jpg" alt="centered image" height="200" width="400">
                 <%}%>
             </tr>
             <%})%>
         </table>
-        <%- include('Imagen') %>
     </div>
 </body>
 </html>
