--- a/app/views/cabecera.ejs
+++ b/app/views/cabecera.ejs
@@ -11,5 +11,6 @@
 <body class="container">
 
     <%- include('navbar') %>
+    <img src="/Images/logo_escudo_horizontal.jpg" alt="centered image" height="200" width="600">
 
 
