--- a/app/views/registro-form.ejs
+++ b/app/views/registro-form.ejs
@@ -46,7 +46,7 @@
                         placeholder="Impuesto">
                 </div>
                 <div class="form-group text-center">
-                    <button class="btn btn-outline-success my-2 my-sm-0">Registrar</button>
+                    <button class="btn btn-primary btn-lg btn-block">Registrar</button>
                 </div>
             </form>
         </div>
