--- a/app/views/producto_3.ejs
+++ b/app/views/producto_3.ejs
@@ -16,6 +16,8 @@
             <% productos.forEach(function(producto) {%>
                 <table class="table mt-2">
                 <%if (producto.nombre=='Milo') {%>
+                <%} else if (producto.nombre=='Chocolisto'){%>
+                <%} else if (producto.nombre=='Nesquik'){%>
                     <thead class="thead-dark">
                         <tr>
                             <th>Nombre del producto</th>
@@ -33,12 +35,10 @@
                     <div class="container mt-5">
                         <div class="row">
                             <div class="col text-center">
-                                <img class="mx-auto d-block" src="/Images/logo_milo.jpg" height="200" width="400">  
+                                <img class="mx-auto d-block" src="/Images/logo_nesquik.jpg" height="200" width="400">  
                             </div>
                         </div>
                     </div>
-                <%} else if (producto.nombre=='Chocolisto'){%>
-                <%} else if (producto.nombre=='Nesquik'){%>
                 <%}%>
             </tr>
             <%})%>
